@@ -60,6 +60,7 @@
 #include <mysqld_error.h>
 
 typedef struct {
+	char *auto_incr_query;
 	MYSQL *db_conn;
 	bool rollback;
 	List update_list;
